# PHEMS_federated_node

./: .github.merged.cursor  .gitignore  .gitmodules  ARGOCD.md  CHANGELOG.md  DAGSTER_ARCHITECTURE_DIAGRAMS.md  DAGSTER_DATABASE_SETUP.md  DAGSTER_DOCS_INDEX.md  DAGSTER_EXTERNAL_DB_README.md  DAGSTER_QUICK_REFERENCE.md  DAGSTER_SETUP_CHECKLIST.md  DEPLOYMENT.md  GETTING_STARTED.md  Makefile  README.md  TODO.md  job.yaml  notepad.yaml
.kind/: README.md  kind-config.yaml  run.sh
dagster/: .dockerignore  Dockerfile  TODO.md  build.sh  compile.sh  dagster.yaml  pyproject.toml  requirements.txt  workspace.yaml
dagster/app/: github.py  logger.py
dagster/app/definitions/: __Init__.py  __init__.py  examples.py  github.py  iris_analysis.py  jobs.py  pipes.py  sensors.py
dagster/app/resources/: minio.py
dagster/iris_analysis/: definitions.py
dagster/iris_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker_models/: build.sh
docs/: federated-node-0.0.6.tgz  federated-node-0.0.7.tgz  federated-node-0.1.0.tgz  federated-node-0.10.0-02a03a.tgz  federated-node-0.10.0-04f437.tgz  federated-node-0.10.0-07e6b7.tgz  federated-node-0.10.0-080a3a.tgz  federated-node-0.10.0-116a23.tgz  federated-node-0.10.0-21eae5.tgz  federated-node-0.10.0-22a321.tgz  federated-node-0.10.0-2c6a60.tgz  federated-node-0.10.0-352a55.tgz  federated-node-0.10.0-3e189a.tgz  federated-node-0.10.0-46b356.tgz  federated-node-0.10.0-575c4e.tgz  federated-node-0.10.0-768ef4.tgz  federated-node-0.10.0-7be448.tgz  federated-node-0.10.0-828af4.tgz  federated-node-0.10.0-9b88f6.tgz  federated-node-0.10.0-a27ea5.tgz  federated-node-0.10.0-a599f9.tgz  federated-node-0.10.0-a7d80e.tgz  federated-node-0.10.0-a93759.tgz  federated-node-0.10.0-ab440a.tgz  federated-node-0.10.0-c8c42b.tgz  federated-node-0.10.0-c8d79d.tgz  (+553 more)
(+284 files in other folders)
