[project]
name = "code"
description = "Dagster Example Codebase"
authors = [{ name = "George Eddie", email = "george.eddie@aridhia.com" }]
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagster",
    "dagster-k8s",
    "dagster-postgres",
    'dagster-graphql',
    "python-dotenv",
    "pandas",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "app.definitions"
code_location_name = "code"
